other-vpol/metadata-match-regex/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    corp.org/version: v1.1
  name: badpod01
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    corp.org/version: v1x2x3
  name: badpod-regex-separator
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    corp.org/version: "0.0.1"
  name: badpod02
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    corp.org/version: "v1.22.1"
  name: badpod03
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35

---
apiVersion: v1
kind: Pod
metadata:
  labels:
    corp.org/version: v0.1.9
  name: goodpod01
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    corp.org/version: v0.0.1
  name: goodpod02
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        corp.org/version: "v0.12.9"
        app: busybox
    spec:
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          labels:
            corp.org/version: "v1.13"
        spec:
          containers:
          - name: busybox
            image: ghcr.io/kyverno/test-busybox:1.35
          restartPolicy: OnFailure

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        corp.org/version: "v0.1.9"
        app: busybox
    spec:
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          labels:
            corp.org/version: "v0.1.9"
        spec:
          containers:
          - name: busybox
            image: ghcr.io/kyverno/test-busybox:1.35
          restartPolicy: OnFailure
