other-vpol/metadata-match-regex/.kyverno-test-exceptions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata: {name: metadata-match-regex-exceptions}
policies: [../metadata-match-regex.yaml]
resources: [../.kyverno-test/resource.yaml]
exceptions: [../.kyverno-test/exceptions.yaml]
results:
- {kind: Pod, policy: metadata-match-regex, resources: [badpod01], result: pass, isValidatingPolicy: true}
